--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body{
 
 h1{
     font-family: 'Trirong', serif;
-    font-size: 800%;
+    font-size: 700%;
+    text-align: center;
+    line-height: 110%;
 }
 
 a{
@@ -97,7 +99,18 @@ input{
 }
 
 
+/************************************************ INSCRIPTION  ************************************************/
+table{
+    width: 50%;
+    padding: 0.5%;
+    border: 3px solid black;
+}
 
+th{
+    margin: 10%;
+    height: 5%;
+    font-size: 150%;
+}
 
 
 
