--- a/style.css
+++ b/style.css
@@ -99,17 +99,32 @@ input{
 }
 
 
-/************************************************ INSCRIPTION  ************************************************/
+/************************************************ ADMIN.PHP  ************************************************/
+#table-container{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 table{
-    width: 50%;
+    width: 30%;
     padding: 0.5%;
     border: 3px solid black;
+}
+
+tr{
+    text-align: center;
 }
 
 th{
     margin: 10%;
     height: 5%;
-    font-size: 150%;
+    font-size: 200%;
+}
+
+td{
+    padding: 1%;
 }
 
 
