--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body{
 body{
     background-image: url("img/wall.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1{
